# vilkas

./: .gitignore  Cargo.toml  test.rb  vilkas.toml
src/: main.rs  ord.rs
src/http/: mod.rs  tests.rs
src/http/api/: mod.rs  model.rs  recommend.rs  view.rs
src/http/api/items/: create.rs  delete.rs  mod.rs  show.rs
src/learn/: features.rs  logistic.rs  metrics.rs  mod.rs  vector.rs
src/recommend/: conf.rs  config.rs  mod.rs  request.rs  train.rs
src/storage/: items.rs  master.rs  mod.rs  redis.rs  spike.rs  users.rs
src/storage/core/: mod.rs  users.rs
src/storage/core/items/: decay.rs  mod.rs
src/storage/core/models/: example.rs  list.rs  mod.rs
src/storage/items/: decay.rs  mod.rs  scope.rs
src/storage/mem/: ext.rs  item.rs  keys.rs  mod.rs  model.rs  tests.rs  user.rs
src/storage/mem/tests/: mod.rs  wrap.rs
src/storage/models/: example.rs  list.rs  mod.rs
src/storage/redis/: ext.rs  item.rs  keys.rs  mod.rs  model.rs  user.rs
src/storage/spike/: ext.rs  item.rs  keys.rs  mod.rs  model.rs  user.rs
