[package]
name = "vilkas"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.8"
rand = "0.6.5"
crossbeam = "0.7.1"
rouille = "3.0.0"
failure = "0.1.5"
bincode = "1.1.4"
aerospike = "0.3.0"

[dependencies.config]
version = "0.9.3"
default-features = false
features = ["toml"]

[dependencies.uuid]
version = "0.7.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
