[package]
name = "vilkas"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lmdb"]

[dependencies]
num-traits = "0.2.8"
rand = "0.7.0"
crossbeam = "0.7.1"
rouille = "3.0.0"
failure = "0.1.5"
bincode = "1.1.4"
byteorder = "1.3.2"
serde_json = "1.0.40"
log = "0.4.7"
env_logger = "0.6.2"

[dependencies.lmdb]
version = "0.8.0"
optional = true

[dependencies.aerospike]
version = "0.3.0"
optional = true

[dependencies.config]
version = "0.9.3"
default-features = false
features = ["toml"]

[dependencies.uuid]
version = "0.7.4"
features = ["serde", "v4"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
